[package]
name = "servicio_numeros"
version = "0.1.0"
authors = ["geoku <geovannyc255@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.100", features = ["derive"] }
serde_json = "1.0"

[dependencies.rocket]
version = "0.4.2"
features = ["private-cookies"]

[dependencies.rocket_contrib]
default-features = false
features = ["json", "serve"]